update: undoed the loading indicator for now for all containers except for the app due to the indicator string being displayed even when there is nothing to display rathen than being only displayed when the present content is loading and fixed the visibility of scrollbar in friend requests page when there is no friend requests pending approval

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,3 +21,14 @@
   pointer-events: none;
   /* cursor: not-allowed; */
 }
+
+.app-loading-indicator {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.5;
+  height: 100%;
+  width: 100%;
+  font-size: 4rem;
+  color: #8696a0;
+}
