--- a/client/src/components/ChatPageComponents/ChatList/ChatList.css
+++ b/client/src/components/ChatPageComponents/ChatList/ChatList.css
@@ -368,3 +368,13 @@
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #222e35;
 }
+
+/* .chat-list .loading-chat-messages-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  opacity: 0.5;
+  font-size: 2rem;
+} */
